# fastapi_authtools

./: .gitignore  .pypirc  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py  user.py
.github/workflows/: python-publish.yml
fastapi_authtools/: __init__.py  backend.py  exceptions.py  middleware.py  models.py  token.py  user.py
templates/: login.html
tests/: conftest.py
tests/test_api/: conftest.py  test_auth.py
tests/test_classes/: conftest.py  test_middleware.py  test_token.py
tests/test_fullstack/: conftest.py  test_auth.py
tests/test_fullstack/templates/: login.html
