[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "fastapi_authtools"
version = "0.3"
authors = [
  { name="Michael Nightingale", email="suslanchikmopl@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/michael7nightinglae/fastapi_authtools"
"Bug Tracker" = "https://github.com/michael7nightinglae/fastapi_authtools/issues"
